implement CRUD operations

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -9,8 +9,13 @@
   </div>
   <div class="course-actions">
     <button class="btn">VIEW COURSE</button>
-    <button class="btn">EDIT</button>
-    <img class="delete" src="/assets/icons/delete.svg" alt="delete" />
+    <button class="btn" (click)="onEditCourse(course)">EDIT</button>
+    <img
+      class="delete"
+      (click)="onDeleteCourse(course.id)"
+      src="/assets/icons/delete.svg"
+      alt="delete"
+    />
   </div>
 </div>
 }
