--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <mat-sidenav-container fullscreen>
-
   <mat-sidenav #start (click)="start.close()">
-
     <mat-nav-list>
-
       <a mat-list-item routerLink="/">
         <mat-icon>library_books</mat-icon>
         <span>Courses</span>
@@ -22,26 +19,19 @@
         <mat-icon>exit_to_app</mat-icon>
         <span>Logout</span>
       </a>
-
     </mat-nav-list>
-
   </mat-sidenav>
 
   <mat-toolbar color="primary">
-
     <div class="toolbar-tools">
-
       <button mat-icon-button (click)="start.open('mouse')">
         <mat-icon>menu</mat-icon>
       </button>
 
       <div class="filler"></div>
-
     </div>
-
   </mat-toolbar>
 
-
-  <router-outlet/>
-
+  <loading />
+  <router-outlet />
 </mat-sidenav-container>
