implement logging service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
       <div class="filler"></div>
     </div>
   </mat-toolbar>
-
+  <messages />
   <loading />
   <router-outlet />
 </mat-sidenav-container>
