--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -1,4 +1,3 @@
-
 .messages-container {
   display: flex;
   position: relative;
@@ -18,12 +17,20 @@
   color: white;
   background-color: #fc00ba;
   border: 1px solid #50277c;
+
+  .close {
+    filter: invert(1);
+  }
 }
 
 .message.info {
   color: white;
   background-color: #2176f7;
   border: 1px solid #50277c;
+
+  .close {
+    filter: invert(1);
+  }
 }
 
 .message.warning {
@@ -38,11 +45,11 @@
   border: 1px solid #50277c;
 }
 
-
 .close {
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
   cursor: pointer;
   max-height: 20px;
 }
