--- a/src/app/course-category-combobox/course-category-combobox.component.html
+++ b/src/app/course-category-combobox/course-category-combobox.component.html
@@ -1,12 +1,9 @@
-
 <div class="form-control">
+  <label>{{ label() }}</label>
 
-  <label></label>
-
-  <select  #category>
+  <select [value]="value()" (change)="onValueChange($event)">
     <option value="BEGINNER">Beginners</option>
     <option value="INTERMEDIATE">Intermediate</option>
     <option value="ADVANCED">Advanced</option>
   </select>
-
 </div>
