add view course feature

--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -8,7 +8,9 @@
     <p>{{ course.longDescription }}</p>
   </div>
   <div class="course-actions">
-    <button class="btn">VIEW COURSE</button>
+    <button class="btn" [routerLink]="['courses', course.id]">
+      VIEW COURSE
+    </button>
     <button class="btn" (click)="onEditCourse(course)">EDIT</button>
     <img
       class="delete"
