--- a/src/app/course/course.component.scss
+++ b/src/app/course/course.component.scss
@@ -1,9 +1,9 @@
-
 @import "../../styles/table";
 
 .course-container {
-  max-width: 400px;
-  margin: 0 auto;
+  width: 90%;
+  max-width: 800px;
+  margin: 2rem auto;
 }
 
 .course-header {
