--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,11 +3,11 @@
 @include buttonStyles();
 
 .courses-panel {
+  width: 95%;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 2rem auto;
 }
 
 button {
   margin-right: 10px;
 }
-
